Sun Sep 21 03:50:13 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in Makefile.am: Define SFIDL_PATH_STDINC in make-paths.h.

Sun Sep 21 02:34:26 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/Makefile.am: get section 1 manual pages to
	install and build properly.

	* docs/bse-plugin-generator.1.texi: started manual page for
	the bse plugin generator.

Mon Sep  8 14:23:50 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcanvassource.c (bst_canvas_source_build_channels): catch
	division by zero with causes a SIGFPE on alpha, reported by
	Marius Hillenbrand.

Mon Sep  8 05:29:43 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcanvassource.c: make icon sizes configurable.

Mon Sep  8 02:02:10 2003  Tim Janik  <timj@gtk.org>

	* acbeast.m4 (ac_vm): add -fmessage-length= compiler option for
	g++ if ncurses is present.

Thu Sep  4 14:28:12 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparamview.c:
	* beast-gtk/bstpreferences.c: allow display of non-readable properties.

	* beast-gtk/bstmain.c: changed a couple of the -: debugging flags.

Tue Sep  2 23:05:35 2003  Tim Janik  <timj@gtk.org>

	* docs/site-download.texi: update beast HOWTO url.

Mon Aug 25 16:11:36 2003  Tim Janik  <timj@gtk.org>

	* autogen.sh: upgrade autoconf dependancy to 2.50.

	* acbeast.m4: add AC_DIVERT_BEFORE_HELP() taken from gtk+,
	to define stuff in configure.in available for help generation.

	* configure.in: port over to autoconf2.57, use configure.h
	as new generated configuartion file.

	* Makefile.am:
	* topconfig.h: provide package-wide configuration results.

	* */*.c: include "topconfig.h" now.

Fri Aug 22 08:06:29 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstrecords.idl:
        * bsw/Makefile.am:
        * beast-gtk/Makefile.am: renamed *.sfidl to *.idl.

Fri Aug 22 04:22:56 2003  Tim Janik  <timj@gtk.org>

	* acbeast.m4: enable -O2 optimizations for c++ code.

Thu Jul 31 18:15:03 2003  Tim Janik  <timj@gtk.org>
