@@ -1,3 +1,8 @@
+Tue Sep 16 16:48:54 2003  Alper Ersoy  <dirt@gtk.org>
+
+        * docs/generated/css/default.css: changed file browsing styles to
+        match the new texitheque modules.
+
 Sun Sep 21 03:50:13 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* configure.in Makefile.am: Define SFIDL_PATH_STDINC in make-paths.h.
